Mercadinho do Guga

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.Primefaces_6.2.classpath}
+    ${libs.PrimeFaces_6.2.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -70,7 +70,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
@@ -86,6 +85,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=CarrinhoDeCompras.war
+war.name=Mercadinho.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
